GNOME Bugzilla – Bug 777135
gkeyfile: Be more specific about error codes in documentation
Last modified: 2017-02-05 14:04:36 UTC
Trivial patch attached.
Created attachment 343304 [details] [review] gkeyfile: Be more specific about error codes in documentation It’s hard to know whether trying to load a non-existent key file will result in G_KEY_FILE_ERROR_NOT_FOUND or G_FILE_ERROR_NOENT; try to improve the documentation to clarify that.
Review of attachment 343304 [details] [review]: Your patch is already an improvement over the status quo, so thanks for that. I think it may be better to state it like so, however: 1) (only for the search function) Failure to find a file in any search path gives you G_KEY_FILE_ERROR_NOT_FOUND 2) OS errors when trying to open or read the given/found file give you GFileError 3) errors when trying to parse the content give you GKeyFileError It may also be worth specifically mentioning in the load_from_file() case that G_KEY_FILE_ERROR_NOT_FOUND is never returned.
Created attachment 343319 [details] [review] gkeyfile: Be more specific about error codes in documentation It’s hard to know whether trying to load a non-existent key file will result in G_KEY_FILE_ERROR_NOT_FOUND or G_FILE_ERROR_NOENT; try to improve the documentation to clarify that.
Review of attachment 343319 [details] [review]: Allison says this is OK.
Attachment 343319 [details] pushed as edc68f2 - gkeyfile: Be more specific about error codes in documentation